# whisper-input

./: .cc-template.yml  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  build.sh  build_deb.sh  build_macos.sh  config.example.yaml  config.yaml  config_manager.py  hotkey.py  input_method.py  install.sh  main.py  model_state.py  overlay.py  pyproject.toml  recorder.py  run_macos.sh  settings_server.py  setup_linux.sh  setup_macos.sh  stt_sensevoice.py  version.py
.claude/: .gitignore  settings.json
.github/workflows/: build.yml  release.yml
assets/: generate_icon.py
backends/: __init__.py  autostart_linux.py  autostart_macos.py  hotkey_linux.py  hotkey_macos.py  input_linux.py  input_macos.py  overlay_linux.py  overlay_macos.py
benchmarks/: README.md  __init__.py  __main__.py  config.py  fixtures.py  harness.py  reporting.py
benchmarks/backends/: __init__.py  base.py  qwen3_fp16_baicai1145.py  qwen3_int8_zengshuishui.py
benchmarks/results/baselines/: 2026-04-28_apple-silicon_round38.json  2026-04-28_apple-silicon_round38.md
debian/: control  postinst  python_dist.txt  setup_window.py  whisper-input.sh
docs/: BACKLOG.md  DEVTREE.md
docs/10-torch下载加速/: PLAN.md  PROMPT.md  SUMMARY.md
docs/12-去torch-iic官方ONNX/: CONTEXT.md  PLAN.md  PROMPT.md  SUMMARY.md
docs/13-目录重构/: SUMMARY.md
docs/16-架构整理与浮窗视觉统一/: PLAN.md  PROMPT.md  SUMMARY.md
docs/17-PyPI-wheel写入commit-hash/: PLAN.md  PROMPT.md  SUMMARY.md
docs/18-国际化i18n/: PLAN.md  PROMPT.md  SUMMARY.md
docs/21-一键安装脚本/: PLAN.md  PROMPT.md  SUMMARY.md
docs/22-热键回调死锁修复/: PLAN.md  PROMPT.md  SUMMARY.md
docs/24-退出路径CoreAudio死锁修复/: PLAN.md  PROMPT.md  SUMMARY.md
docs/25-更新检查与更新触发/: PLAN.md  PROMPT.md  SUMMARY.md
docs/26-Qwen3-ASR替换SenseVoice/: PLAN.md
docs/27-冷启动优化/: PLAN.md  PROMPT.md  SUMMARY.md
docs/28-Qwen3-ASR流式识别/: PLAN.md  PROMPT.md  SUMMARY.md
docs/3-DEB安装体验优化/: PLAN.md  PROMPT.md  SUMMARY.md
docs/30-1.7B模型适配修复/: PLAN.md  PROMPT.md  SUMMARY.md
docs/31-启动时清理已有实例/: PLAN.md  PROMPT.md  SUMMARY.md
docs/33-CI失败修复/: PLAN.md  PROMPT.md  SUMMARY.md
docs/34-更新检测TTL/: PLAN.md  SUMMARY.md
docs/35-流式滑窗/: PLAN.md  PROMPT.md  SUMMARY.md
docs/37-换fp16-ONNX修1.7B-offline/: PLAN.md  PROMPT.md  SUMMARY.md  spike.py
docs/38-推理性能benchmark/: PLAN.md  PROMPT.md  SUMMARY.md  baseline_results.md  benchmark.py
docs/4-远程桌面热键与麦克风探索/: PROMPT.md  SUMMARY.md
docs/5-macOS平台支持/: PLAN.md  PROMPT.md  SUMMARY.md
docs/6-产品正规化/: PLAN.md  PROMPT.md  SUMMARY.md
docs/7-macOS分发优化/: PLAN.md  PROMPT.md  SUMMARY.md
docs/8-GitHub CI与版本管理/: PLAN.md  PROMPT.md  SUMMARY.md
docs/9-Linux安装体验优化/: PLAN.md  SUMMARY.md
macos/: Info.plist  python_dist.txt  setup_window.py  whisper-input.sh
packaging/debian/: postrm
scripts/: generate_icon.py  generate_whisper_mel_golden.py  hatch_build.py  setup.sh  setup_linux.sh  spike_qwen3_long_audio.py  spike_qwen3_streaming.py
src/daobidao/: __main__.py  _legacy_migration.py  config_manager.py  i18n.py  logger.py  recorder.py  settings_server.py  single_instance.py  updater.py
src/daobidao/assets/locales/: en.json  fr.json  zh.json
src/daobidao/backends/: app_bundle_macos.py  autostart_macos.py  hotkey_macos.py  overlay_linux.py  overlay_macos.py  tray_linux.py  tray_macos.py
src/daobidao/stt/: base.py
src/daobidao/stt/qwen3/: _download_manager.py  _feature.py  _onnx_runner.py  _prompt.py  _stream.py  _tokenizer.py  qwen3_asr.py
src/whisper_input/: __main__.py  config_manager.py  hotkey.py  i18n.py  input_method.py  overlay.py  recorder.py  settings_server.py  tray.py  updater.py  version.py
src/whisper_input/assets/: config.example.yaml  settings.html  whisper-input.desktop
src/whisper_input/assets/locales/: en.json  fr.json  zh.json
src/whisper_input/backends/: app_bundle_macos.py  autostart_linux.py  autostart_macos.py  hotkey_linux.py  hotkey_macos.py  overlay_linux.py  overlay_macos.py  tray_linux.py  tray_macos.py
src/whisper_input/stt/: __init__.py  _postprocess.py  base.py  downloader.py  sense_voice.py
src/whisper_input/stt/qwen3/: _downloader.py  _stream.py  qwen3_asr.py
stt/: __init__.py  _postprocess.py  _tokenizer.py  _wav_frontend.py  base.py  downloader.py  model_paths.py  sense_voice.py
tests/: conftest.py  test_autostart_linux.py  test_autostart_macos.py  test_config_manager.py  test_dispatchers.py  test_download_manager.py  test_hotkey_combo.py  test_i18n.py  test_input_method.py  test_logger.py  test_main_preload_fallback.py  test_main_shutdown.py  test_main_streaming.py  test_main_stt_switch.py  test_main_worker.py  test_postprocess.py  test_qwen3_asr.py  test_qwen3_downloader.py  test_qwen3_feature.py  test_qwen3_runner.py  test_qwen3_stream.py  test_qwen3_stream_sliding.py  test_qwen3_stream_sliding_real.py  test_qwen3_stream_smoke.py  test_qwen3_tokenizer.py  test_recorder_probe.py  test_recorder_streaming.py  test_settings_server.py  test_single_instance.py  test_stt_factory.py  test_updater.py  test_version.py
tests/fixtures/: README.md  zh_long.m4a
