[project]
name = "whisper-input"
version = "0.5.0"
description = "跨平台语音输入工具 —— 按住快捷键说话,松开自动输入(SenseVoice ONNX 本地推理,支持中英日韩粤混合)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { email = "pkuyplijing@gmail.com" },
]
requires-python = ">=3.12.13,<3.13"
keywords = [
    "speech-recognition",
    "voice-input",
    "sensevoice",
    "asr",
    "stt",
    "modelscope",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    # Linux 专用
    "evdev>=1.7.0; sys_platform == 'linux'",
    "pygobject>=3.56.2; sys_platform == 'linux'",
    # macOS 专用
    "pynput>=1.7.6; sys_platform == 'darwin'",
    "onnxruntime>=1.24.4",
    "kaldi-native-fbank>=1.22.3",
    "soundfile>=0.13.1",
    "sentencepiece>=0.2.1",
    # 模型下载走 modelscope 官方库的 snapshot_download。base install 只拉
    # filelock / packaging / requests / tqdm / urllib3 这几个轻量依赖(~36 MB),
    # torch / transformers / scipy 等推理栈全在 extras 里,不装 extras 就不会拉。
    "modelscope>=1.35.4",
]

[project.scripts]
whisper-input = "whisper_input.__main__:main"

[project.urls]
Homepage = "https://github.com/pkulijing/whisper-input"
Repository = "https://github.com/pkulijing/whisper-input"
Issues = "https://github.com/pkulijing/whisper-input/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_input"]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "I",      # isort - import 排序
    "N",      # pep8-naming - 命名规范
    "UP",     # pyupgrade - 使用新语法
    "B",      # flake8-bugbear - 常见 bug
    "SIM",    # flake8-simplify - 可简化的代码
    "RUF",    # ruff 专有规则
]
ignore = [
    "RUF001",  # 字符串中的全角字符（中文项目正常）
    "RUF002",  # docstring 中的全角字符
    "RUF003",  # 注释中的全角字符
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
