[project]
name = "whisper-input"
version = "0.7.0"
description = "跨平台语音输入工具 —— 按住快捷键说话,松开自动输入(SenseVoice ONNX 本地推理,支持中英日韩粤混合)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { email = "pkuyplijing@gmail.com" },
]
requires-python = ">=3.12.13,<3.13"
keywords = [
    "speech-recognition",
    "voice-input",
    "sensevoice",
    "asr",
    "stt",
    "modelscope",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    # Linux 专用
    "evdev>=1.7.0; sys_platform == 'linux'",
    "pygobject>=3.56.2; sys_platform == 'linux'",
    # macOS 专用
    "pynput>=1.7.6; sys_platform == 'darwin'",
    # overlay_macos.py 直接 import objc / AppKit / Foundation,声明成直接依赖避免
    # 隐式继承 pynput / pystray 的 transitive pyobjc 拉取。pyobjc-framework-cocoa
    # 同时提供 AppKit + Foundation 两个命名空间,并自动带上 pyobjc-core (objc)。
    "pyobjc-framework-cocoa>=10.0; sys_platform == 'darwin'",
    "onnxruntime>=1.24.4",
    "kaldi-native-fbank>=1.22.3",
    "soundfile>=0.13.1",
    "sentencepiece>=0.2.1",
    # 模型下载走 modelscope 官方库的 snapshot_download。base install 只拉
    # filelock / packaging / requests / tqdm / urllib3 这几个轻量依赖(~36 MB),
    # torch / transformers / scipy 等推理栈全在 extras 里,不装 extras 就不会拉。
    "modelscope>=1.35.4",
    "structlog>=24.0",
]

[project.scripts]
whisper-input = "whisper_input.__main__:main"

[project.urls]
Homepage = "https://github.com/pkulijing/whisper-input"
Repository = "https://github.com/pkulijing/whisper-input"
Issues = "https://github.com/pkulijing/whisper-input/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_input"]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "I",      # isort - import 排序
    "N",      # pep8-naming - 命名规范
    "UP",     # pyupgrade - 使用新语法
    "B",      # flake8-bugbear - 常见 bug
    "SIM",    # flake8-simplify - 可简化的代码
    "RUF",    # ruff 专有规则
]
ignore = [
    "RUF001",  # 字符串中的全角字符（中文项目正常）
    "RUF002",  # docstring 中的全角字符
    "RUF003",  # 注释中的全角字符
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 默认安静模式 + 短 traceback + 每次跑都打印覆盖率
# 想要详细 missing line / HTML / 关掉 cov 时手动覆盖:
#   uv run pytest --cov-report=term-missing
#   uv run pytest --cov-report=html      # 生成 htmlcov/index.html
#   uv run pytest --no-cov               # 临时关掉(配合 -k 单测调试更快)
addopts = "-ra --tb=short --cov=whisper_input --cov-report=term"

[tool.coverage.run]
source = ["src/whisper_input"]
# branch coverage 太激进,line coverage 看大局已经够用
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
# 这些行不算进未覆盖统计:
#   - pragma: no cover     显式标记
#   - if __name__ == ...   入口 guard,只在直接跑脚本时执行
#   - raise NotImplementedError 抽象方法占位
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
